src/components/tab-bar/tab-bar.scss
@import '../../style/internal/mdc-variables';
@import '@limetech/mdc-tab-bar/mdc-tab-bar';
@import '@limetech/mdc-tab-scroller/mdc-tab-scroller';
@import '@limetech/mdc-tab-indicator/mdc-tab-indicator';
@import '@limetech/mdc-tab/mdc-tab';

$tab-content-background-color: #fff;
$tab-background-color: #f6f6f7;
$tab-border-radius: pxToRem(10);
$tab-active-outer-edge-curve-size: pxToRem(12);
$tab-separator-width: pxToRem(2);
$tab-separator-background-color: #e8e8ea;
$tab-scroller-fade-width: 65;

:host {
    display: block;
    position: relative;
}

:host(.has-tabs-with-equal-width) {
    .mdc-tab {
        flex: 1 0 auto;
    }
}

.mdc-tab-bar__icon {
    margin-right: pxToRem(8);
}

.mdc-tab-indicator {
    .mdc-tab-indicator__content {
        border: none;
    }
}

.mdc-tab-scroller {
    position: relative;
    overflow: hidden;

    .scroll-fade,
    .scroll-button {
        position: absolute;
        transition-property: transform;
        transition-duration: 250ms;
        transition-timing-function: ease-out;
    }

    .scroll-fade {
        top: 0;
        height: 100%;
        width: pxToRem($tab-scroller-fade-width);
        pointer-events: none;

        &.left {
            transform: translate3d(pxToRem(0 - $tab-scroller-fade-width), 0, 0);
            left: 0;
            background: linear-gradient(
                270deg,
                rgba(246, 246, 247, 0) 0%,
                rgba(246, 246, 247, 0.8) 40%,
                rgba(246, 246, 247, 0.8) 100%
            );
        }

        &.right {
            transform: translate3d(pxToRem($tab-scroller-fade-width), 0, 0);
            right: 0;
            background: linear-gradient(
                90deg,
                rgba(246, 246, 247, 0) 0%,
                rgba(246, 246, 247, 0.8) 40%,
                rgba(246, 246, 247, 0.8) 100%
            );
        }
    }

    .scroll-button {
        --icon-background-color: #ffffff;
        top: pxToRem(4);

        &.left {
            transform: translate3d(pxToRem(0 - $tab-scroller-fade-width), 0, 0);
            left: pxToRem(4);
        }

        &.right {
            transform: translate3d(pxToRem($tab-scroller-fade-width), 0, 0);
            right: pxToRem(4);
        }
    }

    &.scroll-left .scroll-fade.left,
    &.scroll-left .scroll-button.left,
    &.scroll-right .scroll-fade.right,
    &.scroll-right .scroll-button.right {
        transform: translate3d(0, 0, 0);
    }
}

.mdc-tab-scroller__scroll-area--scroll {
    scrollbar-width: none; // This hides the scrollbars appearing under the tab bar in Firefox
    -ms-overflow-style: none; // Same as above for IE 11
}

.mdc-tab-scroller__scroll-content {
    padding: pxToRem(8) $tab-active-outer-edge-curve-size 0
        $tab-active-outer-edge-curve-size;
    background-color: $tab-background-color;
}

.mdc-tab__ripple {
    box-sizing: border-box;
    border-radius: $tab-border-radius;
    border: {
        style: solid;
        color: transparent;
        width: pxToRem(4);
    }
    opacity: 0.7;

    &:before,
    &:after {
        transition: background-color 0.2s ease;
    }
}

.mdc-tab {
    border-radius: 0;
}

.mdc-tab {
    background-color: transparent;
    flex: 0 0 auto;

    &:not(.mdc-tab--active) {
        &:after {
            content: '';
            display: block;
            background-color: $tab-separator-background-color;
            width: $tab-separator-width;
            height: pxToRem(16);
            margin: auto;
            position: absolute;
            top: 0;
            bottom: 0;
            border-radius: pxToRem(16);
            right: -$tab-separator-width;
        }

        &:last-of-type {
            &:after {
                display: none;
            }
        }
    }
}

.mdc-tab--active {
    border-radius: $tab-border-radius $tab-border-radius 0 0;
    background-color: $tab-content-background-color;
    z-index: 2;

    &:before,
    &:after {
        content: '';
        display: block;
        width: $tab-active-outer-edge-curve-size;
        height: $tab-active-outer-edge-curve-size;
        position: absolute;
        bottom: 0;
        background-color: $tab-content-background-color;

        -webkit-mask-image: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' fill-rule='evenodd' stroke-linejoin='round' stroke-miterlimit='2' clip-rule='evenodd' viewBox='0 0 50 50'><defs/><path d='M0 0c0 27.594 22.406 50 50 50H0V0z'/></svg>"); //For chrome and Safari the browser prefix is needed. (last checked Apr 2020)
        mask-image: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' fill-rule='evenodd' stroke-linejoin='round' stroke-miterlimit='2' clip-rule='evenodd' viewBox='0 0 50 50'><defs/><path d='M0 0c0 27.594 22.406 50 50 50H0V0z'/></svg>");
    }

    &:before {
        left: -$tab-active-outer-edge-curve-size;
        transform: rotateY(180deg);
    }
    &:after {
        right: -$tab-active-outer-edge-curve-size;
    }
}

